Use unpkg for cdn

--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <title>Vue Chartkick</title>
 
     <script src="https://unpkg.com/vue@2.0.3/dist/vue.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js"></script>
+    <script src="https://unpkg.com/chart.js@2.4.0/dist/Chart.bundle.js"></script>
     <script src="https://unpkg.com/chartkick@2.2.1"></script>
     <script src="dist/vue-chartkick.js"></script>
   </head>
