--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
 
     <script src="https://unpkg.com/vue@2.0.3/dist/vue.js"></script>
     <script src="https://unpkg.com/chart.js@2.4.0/dist/Chart.bundle.js"></script>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://unpkg.com/chartkick@2.2.1"></script>
     <script src="dist/vue-chartkick.js"></script>
   </head>
@@ -17,6 +18,7 @@
       <bar-chart :data="[['Work', 32], ['Play', 1492]]"></bar-chart>
       <area-chart :data="{'2013-02-10 00:00:00 -0800': 11, '2013-02-11 00:00:00 -0800': 6}"></area-chart>
       <scatter-chart :data="[[174.0, 80.0], [176.5, 82.3], [180.3, 73.6]]"></scatter-chart>
+      <geo-chart :data="[['United States', 44], ['Germany', 23], ['Brazil', 22]]"></geo-chart>
     </div>
 
     <script>
@@ -30,7 +32,7 @@
           setTimeout(() => {
             this.data = this.data.concat([["Aug", 10]])
             this.max = this.max += 5
-          }, 1000)
+          }, 2000)
         }
       })
     </script>
