--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Vue Chartkick</title>
 
-    <script src="https://unpkg.com/vue@2.5.9/dist/vue.runtime.min.js"></script>
+    <script src="https://unpkg.com/vue@2.5.9/dist/vue.min.js"></script>
     <script src="https://unpkg.com/chart.js@2.7.1/dist/Chart.bundle.min.js"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://unpkg.com/chartkick@2.2.3"></script>
