--- a/test.html
+++ b/test.html
@@ -7,12 +7,12 @@
     <script src="https://unpkg.com/vue@2.5.9/dist/vue.min.js"></script>
     <script src="https://unpkg.com/chart.js@2.7.1/dist/Chart.bundle.min.js"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="https://unpkg.com/chartkick@2.2.3"></script>
+    <script src="https://unpkg.com/chartkick@2.3.0"></script>
     <script src="dist/vue-chartkick.js"></script>
   </head>
   <body>
     <div id="app">
-      <line-chart :data="data" :max="max" legend="bottom" :curve="false"></line-chart>
+      <line-chart :data="data" :max="max" legend="bottom" :curve="false" prefix="$"></line-chart>
       <pie-chart :data="[['Blueberry', 44], ['Strawberry', 23]]" :download="true"></pie-chart>
       <column-chart :data="[['Sun', 32], ['Mon', 46], ['Tue', 28]]"></column-chart>
       <bar-chart :data="[['Work', 32], ['Play', 1492]]"></bar-chart>
