--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/chart.js@2.7.1/dist/Chart.bundle.min.js"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://unpkg.com/chartkick@2.3.0"></script>
-    <script src="dist/vue-chartkick.js"></script>
+    <script src="../dist/vue-chartkick.js"></script>
   </head>
   <body>
     <div id="app">
