--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
       <scatter-chart :data="[[174.0, 80.0], [176.5, 82.3], [180.3, 73.6]]"></scatter-chart>
       <geo-chart :data="[['United States', 44], ['Germany', 23], ['Brazil', 22]]"></geo-chart>
       <line-chart :data="noData"></line-chart>
+      <component is="bar-chart" :data="[['Sun', 32], ['Mon', 46], ['Tue', 28]]"></component>
       {{count}}
     </div>
 
