--- a/test/index.html
+++ b/test/index.html
@@ -15,7 +15,7 @@
       <pie-chart :data="[['Blueberry', 44], ['Strawberry', 23]]" :download="true" :library="library"></pie-chart>
       <column-chart :data="[['Sun', 32], ['Mon', 46], ['Tue', 28]]"></column-chart>
       <bar-chart :data="[['Work', 32], ['Play', 1492]]"></bar-chart>
-      <area-chart :data="{'2013-02-10 00:00:00 -0800': 11, '2013-02-11 00:00:00 -0800': 6}"></area-chart>
+      <area-chart xmin="2013-02-01" xmax="2013-03-01" :data="{'2013-02-10 00:00:00 -0800': 11, '2013-02-11 00:00:00 -0800': 6}"></area-chart>
       <scatter-chart :data="[[174.0, 80.0], [176.5, 82.3], [180.3, 73.6]]"></scatter-chart>
       <geo-chart :data="[['United States', 44], ['Germany', 23], ['Brazil', 22]]"></geo-chart>
       <line-chart :data="noData"></line-chart>
