--- a/test/index.html
+++ b/test/index.html
@@ -5,9 +5,9 @@
     <title>Vue Chartkick</title>
 
     <script src="https://unpkg.com/vue@3"></script>
-    <script src="https://unpkg.com/chart.js@3.0.2/dist/chart.js"></script>
+    <script src="https://unpkg.com/chart.js@3.0.2"></script>
     <script src="https://unpkg.com/chartjs-adapter-date-fns@2.0.0/dist/chartjs-adapter-date-fns.bundle.js"></script>
-    <script src="https://unpkg.com/chartkick@4.0.0/dist/chartkick.js"></script>
+    <script src="https://unpkg.com/chartkick@4.0.0"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="../dist/vue-chartkick.js"></script>
   </head>
